--- a/aspidpartners/registration.html
+++ b/aspidpartners/registration.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20250331131434">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250331161333">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,9 +20,9 @@
 				<div class="header__menu menu">
 					<button type="button" class="menu__icon icon-menu"><span></span></button>
 					<nav class="menu__body">
-						<ul class="menu__list">
+						<ul data-spollers="768,max" class="menu__list">
 							<li class="menu__item">
-								<a href="../advertiser.html" class="menu__link _icon-arrow-down">Advertiser</a>
+								<a href="../advertiser.html" data-spoller class="menu__link menu__arrow _icon-arrow-down">Advertiser</a>
 								<div class="menu__sub-menu sub-menu">
 									<ul class="sub-menu__list">
 										<li class="sub-menu__item">
@@ -297,7 +297,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20250331131434"></script>
+	<script src="js/app.min.js?_v=20250331161333"></script>
 </body>
 
 </html>
