--- a/aspidpartners/advertiser.html
+++ b/aspidpartners/advertiser.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20250331161333">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250402160448">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -220,7 +220,7 @@
 									</ul>
 								</article>
 								<article class="traffic__card card-traffic card-traffic--white">
-									<img class="card-traffic__image ibg" src="img/advertiser/traffic/cart.webp" alt="Image">
+									<img class="card-traffic__image ibg" src="img/advertiser/traffic/email.webp" alt="Image">
 									<div class="card-traffic__content">
 										<h4 class="card-traffic__title">Email</h4>
 										<div class="card-traffic__text">
@@ -243,7 +243,7 @@
 									</div>
 								</article>
 								<article class="traffic__card card-traffic card-traffic--color">
-									<img class="card-traffic__image ibg" src="img/advertiser/traffic/cart.webp" alt="Image">
+									<img class="card-traffic__image ibg" src="img/advertiser/traffic/video.webp" alt="Image">
 									<div class="card-traffic__content">
 										<h4 class="card-traffic__title">Video</h4>
 										<div class="card-traffic__text">
@@ -266,7 +266,7 @@
 									</div>
 								</article>
 								<article class="traffic__card card-traffic card-traffic--light">
-									<img class="card-traffic__image ibg" src="img/advertiser/traffic/cart.webp" alt="Image">
+									<img class="card-traffic__image ibg" src="img/advertiser/traffic/display.webp" alt="Image">
 									<div class="card-traffic__content">
 										<h4 class="card-traffic__title">Display</h4>
 										<div class="card-traffic__text">
@@ -348,7 +348,7 @@
 									</ul>
 								</article>
 								<article class="traffic__card card-traffic card-traffic--white">
-									<img class="card-traffic__image ibg" src="img/advertiser/traffic/cart.webp" alt="Image">
+									<img class="card-traffic__image ibg" src="img/advertiser/traffic/email.webp" alt="Image">
 									<div class="card-traffic__content">
 										<h4 class="card-traffic__title">Email</h4>
 										<div class="card-traffic__text">
@@ -371,7 +371,7 @@
 									</div>
 								</article>
 								<article class="traffic__card card-traffic card-traffic--color">
-									<img class="card-traffic__image ibg" src="img/advertiser/traffic/cart.webp" alt="Image">
+									<img class="card-traffic__image ibg" src="img/advertiser/traffic/video.webp" alt="Image">
 									<div class="card-traffic__content">
 										<h4 class="card-traffic__title">Video</h4>
 										<div class="card-traffic__text">
@@ -394,7 +394,7 @@
 									</div>
 								</article>
 								<article class="traffic__card card-traffic card-traffic--light">
-									<img class="card-traffic__image ibg" src="img/advertiser/traffic/cart.webp" alt="Image">
+									<img class="card-traffic__image ibg" src="img/advertiser/traffic/display.webp" alt="Image">
 									<div class="card-traffic__content">
 										<h4 class="card-traffic__title">Display</h4>
 										<div class="card-traffic__text">
@@ -655,10 +655,10 @@
 						<div class="spollers-footer__body">
 							<ul class="spollers-footer__list">
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link spollers-footer__link--color">Loyalty program</a>
+									<a href="#" class="spollers-footer__link">Loyalty program</a>
 								</li>
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link spollers-footer__link--color">PayPerCall</a>
+									<a href="#" class="spollers-footer__link">PayPerCall</a>
 								</li>
 							</ul>
 						</div>
@@ -668,10 +668,10 @@
 						<div class="spollers-footer__body">
 							<ul class="spollers-footer__list">
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link spollers-footer__link--color">Publisher Terms and Conditions</a>
+									<a href="#" class="spollers-footer__link">Publisher Terms and Conditions</a>
 								</li>
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link spollers-footer__link--color">Privacy Policy</a>
+									<a href="#" class="spollers-footer__link">Privacy Policy</a>
 								</li>
 							</ul>
 						</div>
@@ -680,7 +680,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20250331161333"></script>
+	<script src="js/app.min.js?_v=20250402160448"></script>
 </body>
 
 </html>
