--- a/aspidpartners/blog.html
+++ b/aspidpartners/blog.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20250331161333">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250402160448">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -342,10 +342,10 @@
 						<div class="spollers-footer__body">
 							<ul class="spollers-footer__list">
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link spollers-footer__link--color">Loyalty program</a>
+									<a href="#" class="spollers-footer__link">Loyalty program</a>
 								</li>
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link spollers-footer__link--color">PayPerCall</a>
+									<a href="#" class="spollers-footer__link">PayPerCall</a>
 								</li>
 							</ul>
 						</div>
@@ -355,10 +355,10 @@
 						<div class="spollers-footer__body">
 							<ul class="spollers-footer__list">
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link spollers-footer__link--color">Publisher Terms and Conditions</a>
+									<a href="#" class="spollers-footer__link">Publisher Terms and Conditions</a>
 								</li>
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link spollers-footer__link--color">Privacy Policy</a>
+									<a href="#" class="spollers-footer__link">Privacy Policy</a>
 								</li>
 							</ul>
 						</div>
@@ -367,7 +367,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20250331161333"></script>
+	<script src="js/app.min.js?_v=20250402160448"></script>
 </body>
 
 </html>
