--- a/aspidpartners/blog.html
+++ b/aspidpartners/blog.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20250402160448">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250402171121">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,7 +32,7 @@
 								</div>
 							</li>
 							<li class="menu__item">
-								<a href="../affiliate.html" class="menu__link _icon-arrow-down">Affiliate</a>
+								<a href="../affiliate.html" data-spoller class="menu__link _icon-arrow-down">Affiliate</a>
 								<div class="menu__sub-menu sub-menu">
 									<ul class="sub-menu__list">
 										<li class="sub-menu__item">
@@ -59,9 +59,9 @@
 						</ul>
 					</nav>
 				</div>
-				<div data-da=".menu__body, 767.98" class="header__actions actions-header">
+				<div data-spollers="768,max" data-da=".menu__body, 767.98" class="header__actions actions-header">
 					<div class="actions-header__item">
-						<a href="../login.html" class="actions-header__button button button--login">Log In</a>
+						<a href="../login.html" data-spoller class="actions-header__button button button--login">Log In</a>
 						<div class="actions-header__sub-menu actions-header__sub-menu--login sub-menu sub-menu--login">
 							<ul class="sub-menu__list">
 								<li class="sub-menu__item">
@@ -77,7 +77,7 @@
 						</div>
 					</div>
 					<div class="actions-header__item">
-						<a href="../login.html" class="actions-header__button button button--sign-up">Sign Up</a>
+						<a href="../login.html" data-spoller class="actions-header__button button button--sign-up">Sign Up</a>
 						<div class="actions-header__sub-menu sub-menu">
 							<ul class="sub-menu__list">
 								<li class="sub-menu__item">
@@ -367,7 +367,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20250402160448"></script>
+	<script src="js/app.min.js?_v=20250402171121"></script>
 </body>
 
 </html>
